--- a/css/custom.css
+++ b/css/custom.css
@@ -31,6 +31,14 @@
     border-right-color: #720d34;
 }
 
+.reveal section.chapter {
+  background-color: black;
+}
+
+.chapter {
+  border: 10px solid red !important;
+}
+
 .reveal section img {
   border: none;
   box-shadow: none;
