--- a/css/custom.css
+++ b/css/custom.css
@@ -22,6 +22,9 @@
 .featured {
   color: #720d34;
 }
+.has-dark-background .featured {
+  color: #fcb02a;
+}
 .white {
   color: #FFFFFF;
 }
@@ -59,6 +62,10 @@
 
 .reveal section img.metadrop-logo {
   max-width: 120px;
+}
+
+.reveal section img.xxsmall {
+  max-height: 60px;
 }
 
 .reveal section img.xsmall {
